{
  "version": 4,
  "terraform_version": "1.13.4",
  "serial": 411,
  "lineage": "4ba1c378-3b3f-aa3e-e52f-f46cae1a5c31",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "mgmt_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f39b12f6f8e0b7d5",
            "arn": "arn:aws:ec2:us-east-1:674824728686:elastic-ip/eipalloc-0f39b12f6f8e0b7d5",
            "association_id": "eipassoc-0269581fac0d3f55f",
            "domain": "vpc",
            "id": "eipalloc-0f39b12f6f8e0b7d5",
            "instance": "i-0c6d2a4be49eaa411",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0600f9a89d36875a5",
            "private_dns": "ip-10-0-128-10.ec2.internal",
            "private_ip": "10.0.128.10",
            "public_dns": "ec2-13-223-251-227.compute-1.amazonaws.com",
            "public_ip": "13.223.251.227",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "bigip-1-mgmt-eip"
            },
            "tags_all": {
              "Name": "bigip-1-mgmt-eip"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_network_interface.mgmt",
            "aws_security_group.mgmt_sg"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f991ca0a6d2c11ee",
            "arn": "arn:aws:ec2:us-east-1:674824728686:elastic-ip/eipalloc-0f991ca0a6d2c11ee",
            "association_id": "eipassoc-0972ac20e412cc39e",
            "domain": "vpc",
            "id": "eipalloc-0f991ca0a6d2c11ee",
            "instance": "i-06ca659a3122f5150",
            "network_border_group": "us-east-1",
            "network_interface": "eni-04920f723f9a9f0cc",
            "private_dns": "ip-10-0-144-10.ec2.internal",
            "private_ip": "10.0.144.10",
            "public_dns": "ec2-54-172-16-44.compute-1.amazonaws.com",
            "public_ip": "54.172.16.44",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "bigip-2-mgmt-eip"
            },
            "tags_all": {
              "Name": "bigip-2-mgmt-eip"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_network_interface.mgmt",
            "aws_security_group.mgmt_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bigip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-055ec7fadd095f17d",
            "arn": "arn:aws:ec2:us-east-1:674824728686:instance/i-0c6d2a4be49eaa411",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "bigip-cfe-profile",
            "id": "i-0c6d2a4be49eaa411",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m5.xlarge",
            "ipv6_address_count": 0,
            "key_name": "terra-solis-kp",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-0600f9a89d36875a5"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0600f9a89d36875a5",
            "private_dns": "ip-10-0-128-10.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.128.10",
            "public_dns": "ec2-13-223-251-227.compute-1.amazonaws.com",
            "public_ip": "13.223.251.227",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 171,
                "throughput": 0,
                "volume_id": "vol-0674c37b0ee40e416",
                "volume_size": 57,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a6fc664b20c1dda1",
            "tags": {
              "Name": "f5-bigip-1"
            },
            "tags_all": {
              "Name": "f5-bigip-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-021ca7db836926094"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "user_data"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.mgmt_eip",
            "aws_iam_instance_profile.bigip_profile",
            "aws_iam_role.bigip_cfe_role",
            "aws_network_interface.mgmt",
            "aws_s3_bucket.cfe_state_bucket",
            "aws_security_group.int_sg",
            "aws_security_group.mgmt_sg",
            "aws_security_group.vpc_endpoint_sg",
            "aws_vpc_endpoint.ec2",
            "aws_vpc_endpoint.s3",
            "data.aws_region.current"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-055ec7fadd095f17d",
            "arn": "arn:aws:ec2:us-east-1:674824728686:instance/i-06ca659a3122f5150",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "bigip-cfe-profile",
            "id": "i-06ca659a3122f5150",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m5.xlarge",
            "ipv6_address_count": 0,
            "key_name": "terra-solis-kp",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-04920f723f9a9f0cc"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-04920f723f9a9f0cc",
            "private_dns": "ip-10-0-144-10.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.144.10",
            "public_dns": "ec2-54-172-16-44.compute-1.amazonaws.com",
            "public_ip": "54.172.16.44",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 171,
                "throughput": 0,
                "volume_id": "vol-05a7503977b237ee6",
                "volume_size": 57,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fb5ce2e77e51cd71",
            "tags": {
              "Name": "f5-bigip-2"
            },
            "tags_all": {
              "Name": "f5-bigip-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-021ca7db836926094"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "user_data"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.mgmt_eip",
            "aws_iam_instance_profile.bigip_profile",
            "aws_iam_role.bigip_cfe_role",
            "aws_network_interface.mgmt",
            "aws_s3_bucket.cfe_state_bucket",
            "aws_security_group.int_sg",
            "aws_security_group.mgmt_sg",
            "aws_security_group.vpc_endpoint_sg",
            "aws_vpc_endpoint.ec2",
            "aws_vpc_endpoint.s3",
            "data.aws_region.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "external",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:674824728686:network-interface/eni-01d147b32d72cda5f",
            "attachment": [
              {
                "attachment_id": "eni-attach-055994884f2f718ab",
                "device_index": 1,
                "instance": "i-0c6d2a4be49eaa411"
              }
            ],
            "id": "eni-01d147b32d72cda5f",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "0e:08:5a:1f:26:e5",
            "owner_id": "674824728686",
            "private_dns_name": "ip-10-0-0-10.ec2.internal",
            "private_ip": "10.0.0.10",
            "private_ip_list": [
              "10.0.0.10"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.0.10"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-07ef297dbe745305c"
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-0e0614c0358fddc32",
            "tags": {
              "Name": "bigip-1-ext"
            },
            "tags_all": {
              "Name": "bigip-1-ext"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.ext_sg"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:674824728686:network-interface/eni-081b5c04d6dd5299b",
            "attachment": [
              {
                "attachment_id": "eni-attach-0d42becee083e94e8",
                "device_index": 1,
                "instance": "i-06ca659a3122f5150"
              }
            ],
            "id": "eni-081b5c04d6dd5299b",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:ed:ee:43:8d:ef",
            "owner_id": "674824728686",
            "private_dns_name": "ip-10-0-16-10.ec2.internal",
            "private_ip": "10.0.16.10",
            "private_ip_list": [
              "10.0.16.10"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.16.10"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-07ef297dbe745305c"
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-00c2dddf96880c01a",
            "tags": {
              "Name": "bigip-2-ext"
            },
            "tags_all": {
              "Name": "bigip-2-ext"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.ext_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:674824728686:network-interface/eni-039c2f0d123dbc723",
            "attachment": [
              {
                "attachment_id": "eni-attach-0489688b0d4bcbf88",
                "device_index": 2,
                "instance": "i-0c6d2a4be49eaa411"
              }
            ],
            "id": "eni-039c2f0d123dbc723",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "0e:54:e9:45:1f:c1",
            "owner_id": "674824728686",
            "private_dns_name": "ip-10-0-160-10.ec2.internal",
            "private_ip": "10.0.160.10",
            "private_ip_list": [
              "10.0.160.10"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.160.10"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-011f273dc6c68dab9"
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-0a2ac327962142bed",
            "tags": {
              "Name": "bigip-1-int"
            },
            "tags_all": {
              "Name": "bigip-1-int"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.int_sg"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:674824728686:network-interface/eni-0462823847f52d8db",
            "attachment": [
              {
                "attachment_id": "eni-attach-0ee3ce2a0635d78b5",
                "device_index": 2,
                "instance": "i-06ca659a3122f5150"
              }
            ],
            "id": "eni-0462823847f52d8db",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:a7:93:df:03:8b",
            "owner_id": "674824728686",
            "private_dns_name": "ip-10-0-176-10.ec2.internal",
            "private_ip": "10.0.176.10",
            "private_ip_list": [
              "10.0.176.10"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.176.10"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-011f273dc6c68dab9"
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-0f752c7562855a693",
            "tags": {
              "Name": "bigip-2-int"
            },
            "tags_all": {
              "Name": "bigip-2-int"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.int_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "mgmt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:674824728686:network-interface/eni-0600f9a89d36875a5",
            "attachment": [
              {
                "attachment_id": "eni-attach-00ee8aca7289c96c9",
                "device_index": 0,
                "instance": "i-0c6d2a4be49eaa411"
              }
            ],
            "id": "eni-0600f9a89d36875a5",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "0e:02:68:c9:43:09",
            "owner_id": "674824728686",
            "private_dns_name": "ip-10-0-128-10.ec2.internal",
            "private_ip": "10.0.128.10",
            "private_ip_list": [
              "10.0.128.10"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.128.10"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-021ca7db836926094"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a6fc664b20c1dda1",
            "tags": {
              "Name": "bigip-1-mgmt"
            },
            "tags_all": {
              "Name": "bigip-1-mgmt"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.mgmt_sg"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:674824728686:network-interface/eni-04920f723f9a9f0cc",
            "attachment": [
              {
                "attachment_id": "eni-attach-05d8dd313ed0f5055",
                "device_index": 0,
                "instance": "i-06ca659a3122f5150"
              }
            ],
            "id": "eni-04920f723f9a9f0cc",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:05:a1:89:1e:4d",
            "owner_id": "674824728686",
            "private_dns_name": "ip-10-0-144-10.ec2.internal",
            "private_ip": "10.0.144.10",
            "private_ip_list": [
              "10.0.144.10"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.144.10"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-021ca7db836926094"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fb5ce2e77e51cd71",
            "tags": {
              "Name": "bigip-2-mgmt"
            },
            "tags_all": {
              "Name": "bigip-2-mgmt"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.mgmt_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ext_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:674824728686:security-group/sg-07ef297dbe745305c",
            "description": "Allow inbound VIP traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07ef297dbe745305c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "bigip-ext-sg",
            "name_prefix": "",
            "owner_id": "674824728686",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bigip-ext-sg"
            },
            "tags_all": {
              "Name": "bigip-ext-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b875fbc3e8384e58"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "int_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:674824728686:security-group/sg-011f273dc6c68dab9",
            "description": "Allow internal VPC traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-011f273dc6c68dab9",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "bigip-int-sg",
            "name_prefix": "",
            "owner_id": "674824728686",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bigip-int-sg"
            },
            "tags_all": {
              "Name": "bigip-int-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b875fbc3e8384e58"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mgmt_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:674824728686:security-group/sg-021ca7db836926094",
            "description": "Allow Management and SSH traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-021ca7db836926094",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8443
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 1026,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 1026
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 4353,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 4353
              }
            ],
            "name": "bigip-mgmt-sg",
            "name_prefix": "",
            "owner_id": "674824728686",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bigip-mgmt-sg"
            },
            "tags_all": {
              "Name": "bigip-mgmt-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b875fbc3e8384e58"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc_endpoint_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:674824728686:security-group/sg-0ada5dc014ef5158b",
            "description": "Allow CFE API calls from BIG-IPs",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ada5dc014ef5158b",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-011f273dc6c68dab9",
                  "sg-021ca7db836926094"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "vpc-endpoint-sg",
            "name_prefix": "",
            "owner_id": "674824728686",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "vpc-endpoint-sg"
            },
            "tags_all": {
              "Name": "vpc-endpoint-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b875fbc3e8384e58"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.int_sg",
            "aws_security_group.mgmt_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:674824728686:vpc-endpoint/vpce-027645b32e97e1598",
            "dns_entry": [
              {
                "dns_name": "vpce-027645b32e97e1598-4kk0og31.ec2.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-027645b32e97e1598-4kk0og31-us-east-1b.ec2.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-027645b32e97e1598-4kk0og31-us-east-1a.ec2.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "ec2.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z04386242JB9P6GRRAD9J"
              },
              {
                "dns_name": "ec2.us-east-1.api.aws",
                "hosted_zone_id": "Z04386311E2V31VL9UTNQ"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-027645b32e97e1598",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0226efb75a9917047",
              "eni-0a4d4c0f1e02bc6e5"
            ],
            "owner_id": "674824728686",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0ada5dc014ef5158b"
            ],
            "service_name": "com.amazonaws.us-east-1.ec2",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.132.197",
                "subnet_id": "subnet-0a6fc664b20c1dda1"
              },
              {
                "ipv4": "10.0.151.206",
                "subnet_id": "subnet-0fb5ce2e77e51cd71"
              }
            ],
            "subnet_ids": [
              "subnet-0a6fc664b20c1dda1",
              "subnet-0fb5ce2e77e51cd71"
            ],
            "tags": {
              "Name": "ec2-cfe-endpoint"
            },
            "tags_all": {
              "Name": "ec2-cfe-endpoint"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0b875fbc3e8384e58"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.int_sg",
            "aws_security_group.mgmt_sg",
            "aws_security_group.vpc_endpoint_sg",
            "data.aws_region.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:674824728686:vpc-endpoint/vpce-00d1e47e4ee17c4cd",
            "cidr_blocks": [
              "16.15.176.0/20",
              "16.182.0.0/16",
              "18.34.0.0/19",
              "52.216.0.0/15",
              "54.231.0.0/16",
              "3.5.0.0/19",
              "18.34.232.0/21",
              "16.15.192.0/18"
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "service-defined",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-00d1e47e4ee17c4cd",
            "ip_address_type": "ipv4",
            "owner_id": "674824728686",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-63a5400a",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-081ec6971dce34579",
              "rtb-0e74d7e3d4037faa2"
            ],
            "service_name": "com.amazonaws.us-east-1.s3",
            "service_region": "us-east-1",
            "state": "available",
            "tags": {
              "Name": "s3-cfe-endpoint"
            },
            "tags_all": {
              "Name": "s3-cfe-endpoint"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0b875fbc3e8384e58"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_region.current"
          ]
        }
      ]
    }
  ]
}